iowow (1.4.7) UNRELEASED; urgency=medium

  * Minor fixed on iwhmap

 -- Anton Adamansky <adamansky@gmail.com>  Sun, 23 Aug 2020 14:52:27 +0700

iowow (1.4.6) testing; urgency=medium

  * Added `iwpool_user_data_detach()` (iwpool.h)
  * Added `iwpool_create_empty()` (iwpool.h)
  * Added simple hashmap implementation (iwhmap.h)
  * `IWPOOL` is able to store associated user data (iwpool.h)
  * `pthread_barrierattr` shim for android API < 24
  * Added `iwsha256()` SHA-256 hash implementation (iwsha2.h)
  * Added single thread worker (iwstw.h)
  * Added `iwstree_clear()` (iwstree.h)

 -- Anton Adamansky <adamansky@gmail.com>  Wed, 24 Jun 2020 18:32:24 +0700

iowow (1.4.5) testing; urgency=medium

  * Added `iwulist_clear` (iwarr.h)
  * Added `RCIF` (basedefs.h)
  * Fix assertion error in `iwstree_remove()` (iwstree.h)
  * Allows zero key/value placeholders in `iwstree_iter_next()` (iwstree.h)
  * Added `iwstree_put_overwrite` (iwstree.h)
  * Added  iwstree iteration API (iwstree.h)
  * Added `iwpool_used_size` (iwpool.h)
  * Added `iwstree_int64_cmp` (iwstree.h)
  * Added `IW_DEPRECATED` (basedefs.h)

 -- Anton Adamansky <adamansky@gmail.com>  Thu, 18 Jun 2020 14:19:32 +0700

iowow (1.4.4) testing; urgency=medium

  * Fixed incorrect copying of cursor key data in `IWDB_COMPOUND_KEYS` mode (iwkv.c)
  * Adde compound key example code (compoundkeys1.c)
  * Added `iwstree_visit` (iwstree.h)

 -- Anton Adamansky <adamansky@gmail.com>  Sat, 02 May 2020 19:38:31 +0700

iowow (1.4.3) testing; urgency=medium

  * Fixed errors found by PVS studio

 -- Anton Adamansky <adamansky@gmail.com>  Fri, 24 Apr 2020 00:16:42 +0700

iowow (1.4.2) testing; urgency=medium

  * Added IWULIST, IWLIST implementation (iwarr.h)
  * Added iwpool_split_string (iwpool.h)
  * Added iwpool_printf (iwpool.h)
  * Added iwpool_printf_split (iwpool.h)
  * Added iwxstr_shift (iwxstr.h)
  * Added `#define RCHECK` (basedefs.h)
  * Better error handling of `kh_put`
