@@ -25,12 +25,10 @@
  * SOFTWARE.
  *************************************************************************************************/
 
-
 #include "iwcfg.h"
 #include "log/iwlog.h"
 #include "platform/iwp.h"
 #include "utils/iwutils.h"
-
 
 #include <time.h>
 #include <math.h>
@@ -39,6 +37,7 @@
 #include <unistd.h>
 #include <fcntl.h>
 #include <ftw.h>
+
 
 #ifdef __APPLE__
 #define st_atim st_atimespec
@@ -167,8 +166,13 @@ iwrc iwp_pread(HANDLE fh, off_t off, void *buf, size_t siz, size_t *sp) {
   if (!buf || !sp) {
     return IW_ERROR_INVALID_ARGS;
   }
-  ssize_t rs = pread(fh, buf, siz, off);
+  ssize_t rs;
+again:
+  rs = pread(fh, buf, siz, off);
   if (rs == -1) {
+    if (errno == EAGAIN || errno == EINTR) {
+      goto again;
+    }
     *sp = 0;
     return iwrc_set_errno(IW_ERROR_IO_ERRNO, errno);
   } else {
@@ -184,8 +188,13 @@ iwrc iwp_read(HANDLE fh, void *buf, size_t count, size_t *sp) {
   if (!buf || !sp) {
     return IW_ERROR_INVALID_ARGS;
   }
-  ssize_t rs = read(fh, buf, count);
+  ssize_t rs;
+again:
+  rs = read(fh, buf, count);
   if (rs == -1) {
+    if (errno == EAGAIN || errno == EINTR) {
+      goto again;
+    }
     *sp = 0;
     return iwrc_set_errno(IW_ERROR_IO_ERRNO, errno);
   } else {
@@ -201,8 +210,13 @@ iwrc iwp_pwrite(HANDLE fh, off_t off, const void *buf, size_t siz, size_t *sp) {
   if (!buf || !sp) {
     return IW_ERROR_INVALID_ARGS;
   }
-  ssize_t ws = pwrite(fh, buf, siz, off);
+  ssize_t ws;
+again:
+  ws = pwrite(fh, buf, siz, off);
   if (ws == -1) {
+    if (errno == EAGAIN || errno == EINTR) {
+      goto again;
+    }
     *sp = 0;
     return iwrc_set_errno(IW_ERROR_IO_ERRNO, errno);
   } else {
@@ -220,7 +234,7 @@ iwrc iwp_write(HANDLE fh, const void *buf, size_t size) {
     ssize_t wb = write(fh, rp, size);
     switch (wb) {
       case -1:
-        if (errno != EINTR) {
+        if (errno != EINTR && errno != EINTR) {
           return iwrc_set_errno(IW_ERROR_IO_ERRNO, errno);
         }
       case 0:
